# LensingMapMaking

./: .gitignore  README.md  main.py
Cosmosis/: README.md  likelihood.py  pipeline.ini  values_all.ini
docs/: DarkEnergyPowerSpec.md  Fisher.md  GeneratingPowerSpectra.md  InvestigatingMasks.md  MCMCAnalysis.md  MapMaking.md  NonGaussianMaps.md  QML_discussion.md  Results.md  ShearWithMasks.md  StarMasks.md  TegmarkMethod.md
lib/: CambObject.py  Planck_colourmap.py  RedshiftWindow.py  Visualisations.py
lib/cpp/: CMakeLists.txt  ComputeAlms.h  FindMPFR.cmake  alm_to_cl.cpp
lib/flask_scripts/: camb2info.py  prepCambInput.py
